# flask-cookiecutter-template

./: LICENSE.txt  README.md  cookiecutter.json
.github/workflows/: ci.yml  ci_pipeline.yml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_name}}/app/: app.py  models.py
{{cookiecutter.project_name}}/app/static/css/: styles.css
{{cookiecutter.project_name}}/app/templates/: index.html
