[tool.poetry]
name = "my-flask-app"
version = "0.1.0"
description = "A simple Flask web application"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.1.0"
flask_sqlalchemy = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
